--- a/src/content/messages/chat.scss
+++ b/src/content/messages/chat.scss
@@ -108,7 +108,7 @@
 }
 
 .embedProvider__623de {
-	margin-bottom: 4px;
+	margin-bottom: var(--spacing-05x);
 }
 
 .embedDescription__623de {
