--- a/src/content/sidebar/guilds.scss
+++ b/src/content/sidebar/guilds.scss
@@ -3,7 +3,7 @@
 	border-right: 1px solid var(--secondary_sidebar_border_color);
 
 	.scroller_ef3116 {
-		padding-top: 12px;
+		padding-top: var(--space-md);
 	}
 
 	.footer__214dc {
